--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
 
         <activity android:name=".AddNew">
-            ndroid:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -25,7 +25,7 @@
         </activity>
 
         <activity android:name=".ViewDatabase">
-            ndroid:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
