Edit activity + contraintlayout update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,5 +48,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ViewDatabase" />
         </activity>
+
+        <activity android:name=".Edit">
+            android:parentActivityName=".Details" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Details" />
+        </activity>
     </application>
 </manifest>
