--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,11 +50,11 @@
         </activity>
 
         <activity android:name=".Edit">
-            android:parentActivityName=".Details" >
+            android:parentActivityName=".ViewDatabase" >
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Details" />
+                android:value=".ViewDatabase" />
         </activity>
     </application>
 </manifest>
